Working some routes.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,8 @@
     "moduleResolution": "node",
     "types": ["node"],
     "esModuleInterop": true,
+    "rootDir": "./src",
+    "outDir": "./build",
   },
+   "include": ["src"]
 }
