--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node dist/index.js",
+    "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm  --external:node:* --external:path --packages=external",
+    "dev:node": "node --watch dist/index.js",
+    "dev:tsc": "tsc --watch --preserveWatchOutput",
+    "check": "tsc --noEmit"
   },
-  "type": "module",
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -19,6 +22,7 @@
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.17",
+    "esbuild": "^0.25.4",
     "typescript": "^5.8.3"
   }
 }
