--- a/package.json
+++ b/package.json
@@ -10,19 +10,26 @@
     "start": "node dist/index.js",
     "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm  --external:node:* --external:path --packages=external",
     "dev:node": "node --watch dist/index.js",
-    "dev:tsc": "tsc --watch --preserveWatchOutput",
+    "dev:tsc": "nodemon --watch src --ext ts --exec ts-node src/index.ts",
     "check": "tsc --noEmit"
   },
+  "type": "module",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "tailwindcss": "^4.1.7",
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.17",
     "esbuild": "^0.25.4",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
 }
