--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
 
   dev:
     build: .
-    command: "npm run dev"
+    command: "npm run dev:tsc"
     volumes:
       - .:/app
       - /app/node_modules
