--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.0",
     "tailwindcss": "^4.1.7",
     "zod": "^3.24.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.17",
+    "@types/pg": "^8.15.4",
     "esbuild": "^0.25.4",
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
