--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "esModuleInterop": true,
     "rootDir": "./src",
     "outDir": "./build",
+    "allowImportingTsExtensions": true,
+    "noEmit": true
   },
    "include": ["src"]
 }
