--- a/frontend/dashboard/package.json
+++ b/frontend/dashboard/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "swr": "^2.3.3",
-    "tailwindcss": "^4.1.10"
+    "tailwindcss": "^4.1.10",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
