--- a/gateway/package.json
+++ b/gateway/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "url_shorter",
+  "name": "url_shorter_gateway",
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
@@ -8,28 +8,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm  --external:node:* --external:path --packages=external",
-    "dev:node": "node --watch dist/index.js",
-    "dev:tsc": "nodemon --watch src --ext ts --exec ts-node src/index.ts",
+    "build": "esbuild src/gateway.ts --bundle --platform=node --outfile=dist/gateway.js --format=esm  --external:node:* --external:path --packages=external",
+    "dev:node": "node --watch dist/gateway.js",
+    "dev:tsc": "nodemon --watch src --ext ts --exec ts-node src/gateway.ts",
     "check": "tsc --noEmit"
   },
   "type": "module",
   "dependencies": {
-    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "http-proxy-middleware": "^3.0.5",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.0",
-    "tailwindcss": "^4.1.7",
-    "zod": "^3.24.4"
+    "http-proxy-middleware": "^3.0.5"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
-    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.17",
-    "@types/pg": "^8.15.4",
     "esbuild": "^0.25.4",
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
