--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -18,14 +18,6 @@ RUN npm run build
 
 # Open port
 EXPOSE 3000
-EXPOSE 3001
-EXPOSE 3002
-EXPOSE 3003
-EXPOSE 5173
-
-#Prisma
-RUN npx prisma generate
-RUN npx prisma migrate deploy
 
 # Start app
-CMD ["npm", "start"]
+CMD ["npm", "run", "start"]
