--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -37,6 +37,7 @@
     "nodemon": "^3.1.10",
     "prisma": "^6.11.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "wait-on": "^8.0.4"
   }
 }
