--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
     "jsonwebtoken": "^9.0.2",
     "tailwindcss": "^4.1.7",
     "zod": "^3.24.4"
