--- a/gateway/package.json
+++ b/gateway/package.json
@@ -15,11 +15,15 @@
   },
   "type": "module",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
     "http-proxy-middleware": "^3.0.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.17",
     "esbuild": "^0.25.4",
