--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
   api:
     build: 
       context: ./backend/api
-    command: sh -c " npx wait-on tcp:postgres:5432 && npx prisma migrate deploy && npm start"
+    command: sh -c " npx wait-on tcp:postgres:5432 && npx prisma migrate dev --name init && npm start"
     expose:
       - "3001:3001"
     mem_limit: 1g
