--- a/frontend/pages/tsconfig.json
+++ b/frontend/pages/tsconfig.json
@@ -7,13 +7,9 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "nodenext",
+    "module": "esnext",
     "target": "esnext",
     "types": [],
-    // For nodejs:
-    // "lib": ["esnext"],
-    // "types": ["node"],
-    // and npm install -D @types/node
 
 
     // Stricter Typechecking Options
