--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -20,8 +20,8 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "express-rate-limit": "^8.0.1",
     "jsonwebtoken": "^9.0.2",
+    "rate-limiter-flexible": "^7.3.1",
     "tailwindcss": "^4.1.7",
     "zod": "^3.24.4"
   },
