Added 404 page. Changed login and logout api response (302 status). Added tests for apis.

--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "rate-limiter-flexible": "^7.3.1",
     "tailwindcss": "^4.1.7",
+    "uuid": "^13.0.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
