--- a/backend/pages/package.json
+++ b/backend/pages/package.json
@@ -15,23 +15,16 @@
   },
   "type": "module",
   "dependencies": {
-    "@prisma/client": "^6.11.1",
-    "bcrypt": "^6.0.0",
-    "cookie-parser": "^1.4.7",
+    "@prisma/client": "^7.0.1",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "zod": "^3.24.4"
+    "express": "^5.1.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.1",
-    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.17.1",
     "esbuild": "^0.25.4",
     "nodemon": "^3.1.10",
-    "prisma": "^6.11.1",
+    "prisma": "^7.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
