--- a/backend/pages/package.json
+++ b/backend/pages/package.json
@@ -16,11 +16,17 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^7.0.1",
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.17.1",
     "esbuild": "^0.25.4",
     "nodemon": "^3.1.10",
