--- a/backend/redirect/package.json
+++ b/backend/redirect/package.json
@@ -1,38 +1,31 @@
 {
-  "name": "url_shorter",
+  "name": "redirect",
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
   "author": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=production node dist/index.js",
-    "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm  --external:node:* --external:path --packages=external",
+    "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm  --external:node:* --external:path --packages=external && npx prisma generate",
     "dev:node": "NODE_ENV=development node --watch dist/index.js",
     "dev:tsc": "NODE_ENV=development nodemon --watch src --ext ts --exec ts-node src/index.ts",
     "check": "tsc --noEmit src/index.ts"
   },
-  "type": "module",
   "dependencies": {
     "@prisma/client": "^6.11.1",
-    "bcrypt": "^6.0.0",
-    "cookie-parser": "^1.4.7",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "zod": "^3.24.4"
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cookie-parser": "^1.4.9",
-    "@types/express": "^5.0.1",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22.15.17",
-    "esbuild": "^0.25.4",
-    "nodemon": "^3.1.10",
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.0.3",
+    "esbuild": "^0.27.2",
+    "nodemon": "^3.1.11",
     "prisma": "^6.11.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.3"
   }
 }
