Installed prisma-accelerate

--- a/backend/redirect/package.json
+++ b/backend/redirect/package.json
@@ -9,13 +9,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=production node dist/index.js",
-    "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm  --external:node:* --external:path --packages=external && npx prisma generate",
+    "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm  --external:node:* --external:path --packages=external ",
     "dev:node": "NODE_ENV=development node --watch dist/index.js",
     "dev:tsc": "NODE_ENV=development nodemon --watch src --ext ts --exec ts-node src/index.ts",
     "check": "tsc --noEmit src/index.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.11.1",
+    "@prisma/extension-accelerate": "^3.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1"
   },
